minor design changes on mobile and lang-switch fix

--- a/src/app/main-content/hero-section/hero-section.component.scss
+++ b/src/app/main-content/hero-section/hero-section.component.scss
@@ -202,6 +202,7 @@ $highlight: #00bc8f;
   .hero {
     padding: 94px 24px 0 24px;
     gap: 128px;
+    justify-content: center;
     .hero-text{
       h1 {
         font-size: 64px;
